--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "env": "^0.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
