--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.26.1",
     "env": "^0.0.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
