--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "env": "^0.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "swiper": "^8.1.4"
   },
   "devDependencies": {
